@@ -22,6 +22,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.util.List;
 import java.util.UUID;
 
 @Slf4j
@@ -53,7 +54,7 @@ public class BookingServiceImpl implements BookingService, BookingInternalServic
                 .bookingDate(request.getBookingDate())
                 .entryTime(request.getEntryTime())
                 .amount(amount)
-                .status(BookingStatus.PENDING)
+                .status(BookingStatus.CONFIRMED)
                 .build();
 
         booking = bookingRepository.save(booking);
@@ -103,9 +104,7 @@ public class BookingServiceImpl implements BookingService, BookingInternalServic
         booking.setStatus(BookingStatus.CANCELLED);
         bookingRepository.save(booking);
         
-        // In a real app, publish BookingCancelledEvent so Wallet can process refund if it was CONFIRMED.
-        // Wait, rule says: "Wallet deduction occurs only after successful QR check-in."
-        // So PENDING -> CANCELLED requires no refund.
+        // Wallet deduction occurs only after successful QR check-in, so cancellation never needs a pre-check-in refund.
     }
 
     @Override
@@ -113,7 +112,7 @@ public class BookingServiceImpl implements BookingService, BookingInternalServic
     public void markBookingAsCompleted(UUID bookingId) {
         BookingEntity booking = getBookingEntity(bookingId);
         if (booking.getStatus() != BookingStatus.CONFIRMED) {
-            throw new BadRequestException("Booking must be CONFIRMED to be marked as COMPLETED");
+            throw new BadRequestException("Invalid booking status transition: only CONFIRMED bookings can be marked as COMPLETED, but booking is " + booking.getStatus());
         }
         booking.setStatus(BookingStatus.COMPLETED);
         bookingRepository.save(booking);
@@ -121,17 +120,22 @@ public class BookingServiceImpl implements BookingService, BookingInternalServic
 
     @Override
     @Transactional(readOnly = true)
-    public java.util.List<?> getUserBookings(UUID userId) {
-        // Return active/upcoming bookings for user. Just returning empty list for mock.
-        // Needs proper mapping and response DTO
-        return java.util.Collections.emptyList();
+    public List<BookingResponse> getUserBookings(UUID userId) {
+        return bookingRepository.findByUserIdAndStatusInOrderByBookingDateAscEntryTimeAsc(
+                        userId, List.of(BookingStatus.PENDING, BookingStatus.CONFIRMED))
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
-    public java.util.List<?> getUserBookingHistory(UUID userId) {
-        // Return completed/cancelled bookings for user.
-        return java.util.Collections.emptyList();
+    public List<BookingResponse> getUserBookingHistory(UUID userId) {
+        return bookingRepository.findByUserIdAndStatusInOrderByBookingDateAscEntryTimeAsc(
+                        userId, List.of(BookingStatus.COMPLETED, BookingStatus.CANCELLED, BookingStatus.EXPIRED))
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
     }
 
     private BookingEntity getBookingEntity(UUID bookingId) {
@@ -148,7 +152,17 @@ public class BookingServiceImpl implements BookingService, BookingInternalServic
                 .entryTime(booking.getEntryTime())
                 .exitTime(booking.getExitTime())
                 .status(booking.getStatus())
+                .statusDescription(getUiStatusDescription(booking.getStatus()))
                 .amount(booking.getAmount())
                 .build();
+    }
+
+    private String getUiStatusDescription(BookingStatus status) {
+        return switch (status) {
+            case PENDING -> "Awaiting confirmation";
+            case CONFIRMED -> "Confirmed - show your QR at the gym to check in";
+            case COMPLETED -> "Completed - check-in and wallet deduction succeeded";
+            case CANCELLED -> "Cancelled";
+        };
     }
 }
